feat(新增对LaTeX数学公式支持):

--- a/_config.yml
+++ b/_config.yml
@@ -175,6 +175,7 @@ paginate_path: "/blog/page:num/"
 
 kramdown:
   input: GFM
+  math_engine: null
 
 # Default YAML values (more information on Jekyll's site)
 defaults:
