fix(add Gemfile.lock for docker):

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - ./:/srv/jekyll
     environment:
       - JEKYLL_ENV=docker
-    command: bundle exec jekyll serve
+    command: jekyll serve
     networks:
       front:
 
