--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -139,7 +139,7 @@ it-IT:
 zh: &DEFAULT_ZH_HANS
   comments_label             : "留下评论"
   comments_title             : "评论"
-  comment_form_info          : "您的电子邮箱地址并不会被展示。请填写标记为必须的字段。"
+  comment_form_info          : "你的电子邮箱地址并不会被展示。请填写标记为必须的字段。"
   comment_form_comment_label : "评论"
   comment_form_md_info       : "Markdown语法已支持。"
   comment_form_name_label    : "姓名"
@@ -147,8 +147,8 @@ zh: &DEFAULT_ZH_HANS
   comment_form_website_label : "网站（可选）"
   comment_btn_submit         : "提交评论"
   comment_btn_submitted      : "已提交"
-  comment_success_msg        : "感谢您的评论！被批准后它会立即在此站点展示。"
-  comment_error_msg          : "很抱歉，您的提交存在错误。请确保所有必填字段都已填写正确，然后再试一次。"
+  comment_success_msg        : "感谢你的评论！被批准后它会立即在此站点展示。"
+  comment_error_msg          : "很抱歉，你的提交存在错误。请确保所有必填字段都已填写正确，然后再试一次。"
 zh-CN:
   <<: *DEFAULT_ZH_HANS
 zh-SG:
@@ -164,7 +164,7 @@ zh-TW: &DEFAULT_ZH_HANT
   comment_form_website_label : "網頁 (可選填)"
   comment_btn_submit         : "送出留言"
   comment_btn_submitted      : "已送出"
-  comment_success_msg        : "感謝您的留言！ 審核後將會顯示在站上。"
+  comment_success_msg        : "感謝你的留言！ 審核後將會顯示在站上。"
   comment_error_msg          : "抱歉，部份資料輸入有問題。請確認資料填寫正確後再試一次。"
 zh-HK:
   <<: *DEFAULT_ZH_HANT
