--- a/_config.yml
+++ b/_config.yml
@@ -176,6 +176,11 @@ paginate_path: "/blog/page:num/"
 kramdown:
   input: GFM
   math_engine: null
+  # math_engine_opts:
+  #   delimiters:
+  #     - { left: "$$", right: "$$", display: true }
+  #     - { left: "\\[", right: "\\]", display: true }
+  #     - { left: "\\(", right: "\\)", display: false }
 
 # Default YAML values (more information on Jekyll's site)
 defaults:
@@ -205,6 +210,7 @@ exclude:
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
+  # - kramdown-math-katex
 # Beautiful Jekyll / Dean Attali
 # 2fc73a3a967e97599c9763d05e564189
 
